crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_worker__tests__execute_workflow_fn_with_delays@testing_stub-workflow__workflow.join-next-in-scope-2.snap
---
source: crates/wasm-workers/src/workflow/workflow_worker.rs
expression: "ExecutionLogSanitized::from(execution_log.clone())"
---
{
  "execution_id": "E_00000000000000000000000000",
  "events": [
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "created": {
          "ffqn": "testing:stub-workflow/workflow.join-next-in-scope",
          "params": [],
          "parent": null,
          "scheduled_at": "1970-01-01T00:00:00Z",
          "component_id": {
            "component_type": "workflow",
            "name": "",
            "input_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
          },
          "deployment_id": "Dep_00000000000000000000000000",
          "metadata": null,
          "scheduled_by": null
        }
      },
      "version": 0
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "locked": {
          "component_id": {
            "component_type": "workflow",
            "name": "",
            "input_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
          },
          "executor_id": "Exr_00000000000000000000000000",
          "deployment_id": "Dep_00000000000000000000000000",
          "run_id": "Run_00000000000000000000000001",
          "lock_expires_at": "1970-01-01T00:00:01Z",
          "retry_config": {
            "max_retries": null,
            "retry_exp_backoff": {
              "secs": 0,
              "nanos": 0
            }
          }
        }
      },
      "version": 1
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_create",
            "join_set_id": "n:a"
          }
        }
      },
      "version": 2
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_request",
            "join_set_id": "n:a",
            "request": {
              "type": "child_execution_request",
              "child_execution_id": "E_00000000000000000000000000.n:a_1",
              "target_ffqn": "testing:stub-activity/activity.foo",
              "params": [
                "a"
              ]
            }
          }
        }
      },
      "version": 3
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_request",
            "join_set_id": "n:a",
            "request": {
              "type": "delay_request",
              "delay_id": "Delay_00000000000000000000000000.n:a_0",
              "expires_at": "1970-01-02T00:00:00Z",
              "schedule_at": {
                "in": {
                  "secs": 86400,
                  "nanos": 0
                }
              }
            }
          }
        }
      },
      "version": 4
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_create",
            "join_set_id": "n:b"
          }
        }
      },
      "version": 5
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_request",
            "join_set_id": "n:b",
            "request": {
              "type": "child_execution_request",
              "child_execution_id": "E_00000000000000000000000000.n:b_1",
              "target_ffqn": "testing:stub-activity/activity.foo",
              "params": [
                "b"
              ]
            }
          }
        }
      },
      "version": 6
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "stub",
            "target_execution_id": "E_00000000000000000000000000.n:b_1",
            "retval": {
              "typed": {
                "err": {
                  "err": null
                }
              }
            },
            "persist_result": {
              "Ok": null
            }
          }
        }
      },
      "version": 7
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_next",
            "join_set_id": "n:b",
            "run_expires_at": "1970-01-01T00:00:00Z",
            "requested_ffqn": null,
            "closing": false
          }
        }
      },
      "version": 8
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "locked": {
          "component_id": {
            "component_type": "workflow",
            "name": "",
            "input_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
          },
          "executor_id": "Exr_00000000000000000000000000",
          "deployment_id": "Dep_00000000000000000000000000",
          "run_id": "Run_00000000000000000000000002",
          "lock_expires_at": "1970-01-01T00:00:01Z",
          "retry_config": {
            "max_retries": null,
            "retry_exp_backoff": {
              "secs": 0,
              "nanos": 0
            }
          }
        }
      },
      "version": 9
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_create",
            "join_set_id": "n:f"
          }
        }
      },
      "version": 10
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_request",
            "join_set_id": "n:f",
            "request": {
              "type": "child_execution_request",
              "child_execution_id": "E_00000000000000000000000000.n:f_1",
              "target_ffqn": "testing:stub-activity/activity.foo",
              "params": [
                "f"
              ]
            }
          }
        }
      },
      "version": 11
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_request",
            "join_set_id": "n:f",
            "request": {
              "type": "delay_request",
              "delay_id": "Delay_00000000000000000000000000.n:f_0",
              "expires_at": "1970-01-02T00:00:00Z",
              "schedule_at": {
                "in": {
                  "secs": 86400,
                  "nanos": 0
                }
              }
            }
          }
        }
      },
      "version": 12
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_next",
            "join_set_id": "n:a",
            "run_expires_at": "1970-01-01T00:00:00Z",
            "requested_ffqn": null,
            "closing": true
          }
        }
      },
      "version": 13
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "locked": {
          "component_id": {
            "component_type": "workflow",
            "name": "",
            "input_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
          },
          "executor_id": "Exr_00000000000000000000000000",
          "deployment_id": "Dep_00000000000000000000000000",
          "run_id": "Run_00000000000000000000000003",
          "lock_expires_at": "1970-01-01T00:00:01Z",
          "retry_config": {
            "max_retries": null,
            "retry_exp_backoff": {
              "secs": 0,
              "nanos": 0
            }
          }
        }
      },
      "version": 14
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_next",
            "join_set_id": "n:a",
            "run_expires_at": "1970-01-01T00:00:00Z",
            "requested_ffqn": null,
            "closing": true
          }
        }
      },
      "version": 15
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_create",
            "join_set_id": "n:c"
          }
        }
      },
      "version": 16
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_set_request",
            "join_set_id": "n:c",
            "request": {
              "type": "child_execution_request",
              "child_execution_id": "E_00000000000000000000000000.n:c_1",
              "target_ffqn": "testing:stub-activity/activity.foo",
              "params": [
                "c"
              ]
            }
          }
        }
      },
      "version": 17
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_next",
            "join_set_id": "n:c",
            "run_expires_at": "1970-01-01T00:00:00Z",
            "requested_ffqn": null,
            "closing": true
          }
        }
      },
      "version": 18
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "locked": {
          "component_id": {
            "component_type": "workflow",
            "name": "",
            "input_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
          },
          "executor_id": "Exr_00000000000000000000000000",
          "deployment_id": "Dep_00000000000000000000000000",
          "run_id": "Run_00000000000000000000000004",
          "lock_expires_at": "1970-01-01T00:00:01Z",
          "retry_config": {
            "max_retries": null,
            "retry_exp_backoff": {
              "secs": 0,
              "nanos": 0
            }
          }
        }
      },
      "version": 19
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_next",
            "join_set_id": "n:f",
            "run_expires_at": "1970-01-01T00:00:00Z",
            "requested_ffqn": null,
            "closing": true
          }
        }
      },
      "version": 20
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "locked": {
          "component_id": {
            "component_type": "workflow",
            "name": "",
            "input_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
          },
          "executor_id": "Exr_00000000000000000000000000",
          "deployment_id": "Dep_00000000000000000000000000",
          "run_id": "Run_00000000000000000000000005",
          "lock_expires_at": "1970-01-01T00:00:01Z",
          "retry_config": {
            "max_retries": null,
            "retry_exp_backoff": {
              "secs": 0,
              "nanos": 0
            }
          }
        }
      },
      "version": 21
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "history_event": {
          "event": {
            "type": "join_next",
            "join_set_id": "n:f",
            "run_expires_at": "1970-01-01T00:00:00Z",
            "requested_ffqn": null,
            "closing": true
          }
        }
      },
      "version": 22
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "finished": {
          "result": {
            "ok": {
              "ok": null
            }
          },
          "http_client_traces": null
        }
      },
      "version": 23
    }
  ],
  "responses": [
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "join_set_id": "n:b",
        "event": {
          "type": "child_execution_finished",
          "child_execution_id": "E_00000000000000000000000000.n:b_1",
          "finished_version": 1,
          "result": {
            "err": {
              "err": null
            }
          }
        }
      }
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "join_set_id": "n:a",
        "event": {
          "type": "delay_finished",
          "delay_id": "Delay_00000000000000000000000000.n:a_0",
          "result": {
            "Err": null
          }
        }
      }
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "join_set_id": "n:a",
        "event": {
          "type": "child_execution_finished",
          "child_execution_id": "E_00000000000000000000000000.n:a_1",
          "finished_version": 1,
          "result": {
            "execution_error": {
              "kind": "cancelled"
            }
          }
        }
      }
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "join_set_id": "n:c",
        "event": {
          "type": "child_execution_finished",
          "child_execution_id": "E_00000000000000000000000000.n:c_1",
          "finished_version": 1,
          "result": {
            "execution_error": {
              "kind": "cancelled"
            }
          }
        }
      }
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "join_set_id": "n:f",
        "event": {
          "type": "delay_finished",
          "delay_id": "Delay_00000000000000000000000000.n:f_0",
          "result": {
            "Err": null
          }
        }
      }
    },
    {
      "created_at": "1970-01-01T00:00:00Z",
      "event": {
        "join_set_id": "n:f",
        "event": {
          "type": "child_execution_finished",
          "child_execution_id": "E_00000000000000000000000000.n:f_1",
          "finished_version": 1,
          "result": {
            "execution_error": {
              "kind": "cancelled"
            }
          }
        }
      }
    }
  ],
  "next_version": 23,
  "pending_state": {
    "status": "finished",
    "version": 23,
    "finished_at": "1970-01-01T00:00:00Z",
    "result_kind": "ok"
  },
  "component_digest": "sha256:0000000000000000000000000000000000000000000000000000000000000000"
}
